prevent text wrapping on project chips in task list view

--- a/src/app/features/project-tasks/components/task-list-item/task-list-item.component.scss
+++ b/src/app/features/project-tasks/components/task-list-item/task-list-item.component.scss
@@ -56,10 +56,6 @@
         flex: 0 0 40px;
       }
 
-      .task-scope-id {
-        flex: 0 0 40px;
-      }
-
       .task-checkbox {
         flex: 0 0 16px;
       }
@@ -99,6 +95,9 @@
 
     .mat-standard-chip {
       min-height: 24px !important;
+      text-overflow: ellipsis;
+      overflow: hidden;
+      white-space: nowrap;
     }
 
     .expand-icon {
